
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;

int tcp_connect(char* server,int port){
 int sd,ret;
 struct hostent *host;
        struct sockaddr_in sa;
        host = gethostbyname(server);
        sd = socket(AF_INET, SOCK_STREAM, 0);
        if(sd==-1){
  printf("[!] cannot create socket\n");
  exit(0);
 }
 sa.sin_family = AF_INET;
        sa.sin_port = htons(port);
        sa.sin_addr = *((struct in_addr *) host->h_addr);
        bzero(&(sa.sin_zero),8);
 printf("[ connecting to %s %d/tcp\n",server,port);
        ret = connect(sd,(struct sockaddr *)&sa, sizeof(struct sockaddr));
 if(ret==0){
  printf("[ connected to %s %d/tcp\n",server,port);
 }
 else{
  printf("[!] FATAL: could not connect to %s %d/tcp\n",server,port);
  exit(0);
 }
 return sd;
}
